--- a/carter-esparza/src/styles/globals.css
+++ b/carter-esparza/src/styles/globals.css
@@ -17,6 +17,9 @@ body {
     /* Light background for contrast */
     color: #264653;
     /* Text color */
+
+    margin: 0;
+    padding: 0;
 }
 
 footer {
